fixing scrollbar layout shift & featured image load time

--- a/src/app/(frontend)/globals.css
+++ b/src/app/(frontend)/globals.css
@@ -10,6 +10,10 @@
   }
 } */
 
+html {
+  scrollbar-gutter: stable;
+}
+
 @theme inline {
   --font-heading: var(--font-sans);
   --font-sans: var(--font-sans);
